Brought html and css together

--- a/index.html
+++ b/index.html
@@ -12,7 +12,107 @@
   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
   </script>
 <![endif]-->
-<link rel="stylesheet" type="test/css" href="style.css">
+
+
+body {
+	background-color: #696969;
+	font-family: Monospace, Helvetica;
+	margin-left: 10%;
+	margin-right: auto;
+
+}
+
+a {
+	color: SlateGray;
+
+}
+
+h1	{ 
+	color: white;
+	margin-right: 30px;
+	padding-bottom: 35px;
+
+}
+
+h2	{ 
+	color: white;
+	margin-left: 10%;
+	
+}
+
+
+p 	{
+	color: white;
+	margin-left: 10%;
+	width: 440px;
+	padding-bottom: 10px;
+	
+}
+
+.bottom	{
+	color: white;
+	text-align: center;
+	font-style: italic;
+
+}
+
+IMG.middle {
+	display: block;
+	margin-left: 10%;
+	margin-right: auto;
+
+}
+
+footer {
+	text-align: center;
+	color: white;
+	margin-left: auto;
+
+}
+
+.infobox {
+	position: absolute;
+	left: 65%;
+	top: 6em;
+	z-index: 1;
+    display: block;
+    width: 250px;
+    padding: 5px;
+    margin: 30px;
+    background: #424242;
+    color: gray;
+
+}
+
+.infobox2 {
+	position: absolute;
+	left: 65%;
+	top: 20em;
+	z-index: 1;
+    display: block;
+    width: 250px;
+    padding: 5px;
+    margin: 30px;
+    background: #424242;
+    color: gray
+
+}
+
+/*
+.infobox3 {
+	position: absolute;
+	left: 65%;
+	top: 30em;
+	z-index: -1;
+    display: block;
+    width: 250px;
+    padding: 5px;
+    margin: 30px;
+    background: #424242;
+    color: gray
+}
+*/
+
 
 </head>
 
@@ -22,7 +122,7 @@
 
 	<div class="infobox">
 	info:
-	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> <br>Contacts?<br>mortumm @ quakenet
+	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> <br>Contacts?<br>Mortumm @ Twitter
 	</div>
 
 	<div class="infobox2">
@@ -35,6 +135,14 @@
 rabblebabble
 </div>
 //-->
+
+	<p>03-09-2018</p>
+	<P>Here we go again.</P>
+
+	<p>2017</p>
+	<p>Filler also. Absent.</p>
+
+
 	<p>2016</p>
 	<p>Filler.</p>
 
@@ -43,9 +151,9 @@ rabblebabble
 	<p>Hmm, kinda torn here. I have a choice to make, turning my webhosting to another service and FreeNAS my ass here at home, or keep going as it is. And maybe expand the capacity. I'm leaning on FreeNAS, simply because simplicity and the so called plug-and-playability of it. Maybe some testing on a netbook just for the luls? The webpage would still look and feel just as crap as before, it would simply be hosted by professionals. Should be easy call to make, but I do like to tinker with stuff way too much to give all control away, even if its only hardware side. Mhm, wait and see I guess. </p>
 
 	<p>14-09-2015</p>
-	<p> (testing) </p>
-
-	<img class="middle" src="first.jpg" alt="First" style="width:420px;height:240px">
+	<p> ((old pic, edited out) testing) </p>
+	<!--<img class="middle" src="first.jpg" alt="First" style="width:420px;height:240px">
+	//-->
 
 	<p>08-09-2015</p>
 	<p>Long time no update. The boys keep growing, havent had the time to tinker with anything lately. Some comp management and software troubleshooting. Got my eyes on a Surface Pro for testing but no word yet. Still working on those pictures... maybe some day.</p>
@@ -126,11 +234,7 @@ rabblebabble
 	<p>19-02-2015</p>
 	<p>Transition to newer hardware and nginx complete.<p>
 
-		<h2 class="h2">hi</h2>
 
-	<img class="middle" src="ava.jpg" alt="Say Hi" style="width:420px;height:240px">
-
-		<p class="bottom">No more nginx.</p>
 
 	<footer>
 		<p>&copy; online since 1994</p>
