Fixing after myself...

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   </script>
 <![endif]-->
 
-
-body {
+<style>body {
 	background-color: #696969;
 	font-family: Monospace, Helvetica;
 	margin-left: 10%;
@@ -112,6 +111,7 @@ footer {
     color: gray
 }
 */
+</style>
 
 
 </head>
