Final fix. Next the content updates

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </script>
 <![endif]-->
 
-<style>body {
+<style>
+
+body {
 	background-color: #696969;
 	font-family: Monospace, Helvetica;
 	margin-left: 10%;
@@ -122,8 +124,10 @@ footer {
 
 	<div class="infobox">
 	info:
-	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> <br>Contacts?<br>Mortumm @ Twitter
-	</div>
+	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> <br>Contacts?<br>
+	<a href="https://twitter.com/mortumm" target="_blank">Mortumm @ Twitter</a>
+
+	</div>" 
 
 	<div class="infobox2">
 	links: <br>
