--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@ a {
 
 }
 
-h1	{ 
+h1	{
 	color: white;
 	margin-right: 30px;
 	padding-bottom: 35px;
 
 }
 
-h2	{ 
+h2	{
 	color: white;
 	margin-left: 10%;
-	
+
 }
 
 
@@ -47,7 +47,7 @@ p 	{
 	margin-left: 10%;
 	width: 440px;
 	padding-bottom: 10px;
-	
+
 }
 
 .bottom	{
@@ -127,7 +127,7 @@ footer {
 	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> <br>Contacts?<br>
 	<a href="https://twitter.com/mortumm" target="_blank">Mortumm @ Twitter</a>
 
-	</div>" 
+	</div>
 
 	<div class="infobox2">
 	links: <br>
