First actual update to content
Current situation and plans. Vaguely ofcourse.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@ footer {
 rabblebabble
 </div>
 //-->
+	<p>04-09-2018</p>
+	<P>Hmm, dont know exactly where to start. But got plans to work on my skills in different areas of computing. The latest updates (2016-2017) got lost in old servers malfunctioned harddrive. 
+		
+	I'll get it going from here... aiming to get updates in here weekly.</P>
 
 	<p>03-09-2018</p>
 	<P>Here we go again.</P>
