content and infobox

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ footer {
 }
 
 .infobox {
-	position: absolute;
+	position: fixed;
 	left: 65%;
 	top: 6em;
 	z-index: 1;
@@ -86,7 +86,7 @@ footer {
 }
 
 .infobox2 {
-	position: absolute;
+	position: fixed;
 	left: 65%;
 	top: 20em;
 	z-index: 1;
@@ -139,6 +139,9 @@ footer {
 rabblebabble
 </div>
 //-->
+	<p>23-09-2018</p>
+	<p>Trying to get it all fit in. Javascript is giving me a headache...</p>
+
 	<p>04-09-2018</p>
 	<P>Hmm, dont know exactly where to start. But got plans to work on my skills in different areas of computing. The latest updates (2016-2017) got lost in old servers malfunctioned harddrive. 
 		
