--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ footer {
 .infobox2 {
 	position: fixed;
 	left: 65%;
-	top: 20em;
+	top: 17em;
 	z-index: 1;
     display: block;
     width: 250px;
@@ -123,15 +123,19 @@ footer {
 	<h1>Mortumm's Lair</h1 >
 
 	<div class="infobox">
-	info:
-	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> <br>Contacts?<br>
-	<a href="https://twitter.com/mortumm" target="_blank">Mortumm @ Twitter</a>
+	<b>info:</b>
+	<br>
+	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> 
 
 	</div>
 
 	<div class="infobox2">
-	links: <br>
-	<a href="https://mortumm.imgur.com" target="_blank">my images</a><br>
+	<b>Links:</b>
+	<br>
+	<a href="https://twitter.com/mortumm" target="_blank">Twitter</a>	
+	<br>
+	<a href="https://mortumm.imgur.com" target="_blank">Imgur</a><br>
+	
 	</div>
 
 <!--
