--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ footer {
 	<h1>Mortumm's Lair</h1 >
 
 	<div class="infobox">
-	<b>info:</b>
+	<b>Info:</b>
 	<br>
 	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> 
 
