--- a/index.html
+++ b/index.html
@@ -145,7 +145,10 @@ rabblebabble
 //-->
 
 	<p>01-11-2018</p>
-	<p>Busy busy busy. Actually the whole js thing has been on hold. Getting back at it asap. Still reading up on the basics. Would love to get some new hardware btw :o</p>
+	<p>
+		Busy busy busy. Actually the whole js thing has been on hold. Getting back at it asap. Still reading up on the basics. Would love to get some new hardware btw :o
+
+	</p>
 	
 	<p>23-09-2018</p>
 	<p>Trying to get it all fit in. Javascript is giving me a headache...</p>
