--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@ rabblebabble
 </div>
 //-->
 
+	<p>25-02-2019</p>
+	<p>What is up. Hacklab project on the go. Programming for now on hold... Arduino and rpi stuff is still on the table too, would love to have time to finish those too. Also ran to .projekkkt after many many years. As a total side note: The book "Idiots around me" made me realize and somewhat accept my own way to ingest new things.</p>
+
 	<p>31-12-2018</p>
 	<p>End of the year, didnt reach my goal for the year, time and schedules just wouldnt stretch... More to do for 2019. Happy new year!</p>
 
