--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@ footer {
 rabblebabble
 </div>
 //-->
+	<p>13-03-2019</p>
+	<p>Woop woop, international Arduino day on 16th. Getting some fancy stuff done with proper thinker. OpenSCAD is THE tool, really cool for modeling and just tinkering around with 3d space. Luv it.</p>
+
 
 	<p>25-02-2019</p>
 	<p>What is up. Hacklab project on the go. Programming for now on hold... Arduino and rpi stuff is still on the table too, would love to have time to finish those too. Also ran to .projekkkt after many many years. As a total side note: The book "Idiots around me" made me realize and somewhat accept my own way to ingest new things.</p>
