--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@ footer {
 }
 
 /*
-.topbanner {
+.graphic1 {
 	position: fixed;
 	left: 65%;
-	top: 0em;
+	top: 20em;
 	z-index: -1;
     display: block;
     width: 100%;
@@ -158,6 +158,12 @@ footer {
 rabblebabble
 </div>
 //-->
+
+	<p>14-03-2019</p>
+	<p>Sights.</p>
+	<a href="https://imgur.com/TBwUQiV"><img src="https://i.imgur.com/TBwUQiV.jpg" class="middle" title="source: imgur.com" style="width:420px;height:600px"/></a>
+	
+
 	<p>13-03-2019</p>
 	<p>Woop woop, international Arduino day on 16th. Getting some fancy stuff done with proper thinker. OpenSCAD is THE tool, really cool for modeling and just tinkering around with 3d space. Luv it.</p>
 
