--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ footer {
     padding: 5px;
     margin: 30px;
     background: #424242;
-    color: gray;
+    color:white;
 
 }
 
@@ -95,7 +95,7 @@ footer {
     padding: 5px;
     margin: 30px;
     background: #424242;
-    color: gray
+    color:white;
 
 }
 
