--- a/index.html
+++ b/index.html
@@ -147,17 +147,10 @@ footer {
 	<div class="infobox2">
 	<b>Links:</b>
 	<br>
-	<a href="https://twitter.com/mortumm" target="_blank">Twitter</a>	
+	<a href="https://twitter.com/mortumm" target="_blank">Twitter</a> || <a href="https://mortumm.imgur.com" target="_blank">Imgur</a>
 	<br>
-	<a href="https://mortumm.imgur.com" target="_blank">Imgur</a><br>
 	
 	</div>
-
-<!--
-<div class="infobox3">
-rabblebabble
-</div>
-//-->
 
 
 	<p>08-11-2019</p>
