--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ footer {
     padding: 5px;
     margin: 30px;
     background: #424242;
-    color:white;
+    color:lightgray;
 
 }
 
@@ -95,7 +95,21 @@ footer {
     padding: 5px;
     margin: 30px;
     background: #424242;
-    color:white;
+    color:lightgray;
+
+}
+
+.banner_left {
+	position: fixed;
+	left: 0%;
+	top: 0em;
+	z-index: 1;
+    display: block;
+	height: 100%;
+    width: 20px;
+    padding: 10px;
+    background: #424242;
+    color:lightgray;
 
 }
 
@@ -135,12 +149,13 @@ footer {
 
 <body>
 
+	<br>
 	<h1>M̹̄o̙̪̗̹̫̖r̩̯̱ͤ̌ͪ̀̾̿̒ṱ̷̗̺̦̹͎̟͂̅ͭ͗͂̓̚ü̟̩͚̦̣̱͎ͫͩ͗̽̅͜m̵̭̦̂̈́m̰̠̹̳̜̖ͥ̾̍'̮̖̗̻̓ͫ͘s̘͙̘͕͗̾ͨ ͔͑ͬ̒͒̏̿͜Ľ̷͉ả͗҉̙̼̗͙̼i̘̙ͬ̓͆͛̋̎ͫ͠r̶̈̀̈̔</h1 >
 
 	<div class="infobox">
 	<b>Info:</b>
 	<br>
-	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal mostly for myself.<br> 
+	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal and test environment mostly for myself.<br> 
 
 	</div>
 
@@ -150,6 +165,12 @@ footer {
 	<a href="https://twitter.com/mortumm" target="_blank">Twitter</a> || <a href="https://mortumm.imgur.com" target="_blank">Imgur</a>
 	<br>
 	
+	</div>
+
+	<div class="banner_left">
+		<p>1</p>
+		<p>2</p>
+		<p>3</p>
 	</div>
 
 
