--- a/index.html
+++ b/index.html
@@ -173,6 +173,8 @@ footer {
 		<p>_</p>
 	</div>
 
+	<p>03-01-2020</p>
+	<p>Woah, time really flies. Guess it's the getting older thing they keep talking about. Anyhooooow, two "major" projects going on, frontend both of em. Got a laptop with i7-8750h, huge compute, much power (consumption too...). Happy New Year ;)</p>
 
 	<p>08-11-2019</p>
 	<p>Ooops, kinda forgot the updates.</p>
