--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
 
 	<div class="banner_left">
 		<p>_</p>
-		<p>_</p>
-		<p>_</p>
 	</div>
 
+	<p>21-01-2020</p>
+	<p>Test sites up and running, finally. Fullstack courses ongoing for hUNI.</p>
+	
 	<p>03-01-2020</p>
 	<p>Woah, time really flies. Guess it's the getting older thing they keep talking about. Anyhooooow, two "major" projects going on, frontend both of em. Got a laptop with i7-8750h, huge compute, much power (consumption too...). Happy New Year ;)</p>
 
