--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 	</div>
 
 	<div class="banner_left">
-		<p>_</p>
+		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank">no.1</a>
+		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank">no.2</a>
+		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank">no.3</a>
 	</div>
 
 	<p>21-01-2020</p>
