update + layout tuning
css and icon import

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
   </script>
 <![endif]-->
-
+<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 
 </head>
 
@@ -37,9 +37,9 @@
 	</div>
 
 	<div class="banner_left">
-		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank">no.1</a>
-		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank">no.2</a>
-		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank">no.3</a>
+		<span class="iconify" data-icon="fa:folder" style="font-size:24px;"></span><a href="https://mortumm.github.io/testsite1/index.html" target="_blank"></a>
+		<span class="iconify" data-icon="fa:folder" style="font-size:24px;"></span><a href="https://mortumm.github.io/testsite2/index.html" target="_blank"></a>
+		<span class="iconify" data-icon="fa:folder" style="font-size:24px;"></span><a href="https://mortumm.github.io/testsite3/index.html" target="_blank"></a>
 	</div>
 
 	<p>21-01-2020</p>
@@ -272,11 +272,12 @@
 				z-index: 1;
 				display: block;
 				height: 100%;
-				width: 20px;
-				padding: 10px;
+				width: 30px;
+				padding: 11px;
+				line-height: 40px;
 				background: #424242;
 				color:lightgray;
-			
+							
 			}
 			
 			/*
