icons and linking
iconify

--- a/index.html
+++ b/index.html
@@ -37,9 +37,12 @@
 	</div>
 
 	<div class="banner_left">
-		<span class="iconify" data-icon="fa:folder" style="font-size:24px;"></span><a href="https://mortumm.github.io/testsite1/index.html" target="_blank"></a>
-		<span class="iconify" data-icon="fa:folder" style="font-size:24px;"></span><a href="https://mortumm.github.io/testsite2/index.html" target="_blank"></a>
-		<span class="iconify" data-icon="fa:folder" style="font-size:24px;"></span><a href="https://mortumm.github.io/testsite3/index.html" target="_blank"></a>
+		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
+		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
+		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
+		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
 	</div>
 
 	<p>21-01-2020</p>
@@ -272,7 +275,7 @@
 				z-index: 1;
 				display: block;
 				height: 100%;
-				width: 30px;
+				width: 25px;
 				padding: 11px;
 				line-height: 40px;
 				background: #424242;
