--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
-<meta charset="UTF-8">
+<html lang="en">
+<meta charset="UTF-8"/>
 <meta name="Mortumm" content="Memo">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
