syntax check and update to styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<head>
 <html lang="en">
+<head>
 <meta charset="UTF-8"/>
 <meta name="Mortumm" content="Memo">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 
 	<title>Mortumm's Lair</title>
 
@@ -17,15 +16,13 @@
 </head>
 
 <body>
-
 	<br>
 	<h1>M̹̄o̙̪̗̹̫̖r̩̯̱ͤ̌ͪ̀̾̿̒ṱ̷̗̺̦̹͎̟͂̅ͭ͗͂̓̚ü̟̩͚̦̣̱͎ͫͩ͗̽̅͜m̵̭̦̂̈́m̰̠̹̳̜̖ͥ̾̍'̮̖̗̻̓ͫ͘s̘͙̘͕͗̾ͨ ͔͑ͬ̒͒̏̿͜Ľ̷͉ả͗҉̙̼̗͙̼i̘̙ͬ̓͆͛̋̎ͫ͠r̶̈̀̈̔</h1 >
 
 	<div class="infobox">
 	<b>Info:</b>
-	<br>
-	Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.  This site is a simple workjournal and test environment mostly for myself.<br> 
-
+	<a>Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.<br>  
+	This site is a simple workjournal and test environment mostly for myself.</a>
 	</div>
 
 	<div class="infobox2">
@@ -62,10 +59,8 @@
 	<p>Sights.</p>
 	<a href="https://imgur.com/TBwUQiV"><img src="https://i.imgur.com/TBwUQiV.jpg" class="middle" title="source: imgur.com" style="width:420px;height:600px"/></a>
 	
-
 	<p>13-03-2019</p>
 	<p>Woop woop, international Arduino day on 16th. Getting some fancy stuff done with proper thinker. OpenSCAD is THE tool, really cool for modeling and just tinkering around with 3d space. Luv it.</p>
-
 
 	<p>25-02-2019</p>
 	<p>What is up. Hacklab project on the go. Programming for now on hold... Arduino and rpi stuff is still on the table too, would love to have time to finish those too. Also ran to .projekkkt after many many years. As a total side note: The book "Idiots around me" made me realize and somewhat accept my own way to ingest new things.</p>
@@ -90,10 +85,8 @@
 	<p>2017</p>
 	<p>Filler also. Absent.</p>
 
-
 	<p>2016</p>
 	<p>Filler.</p>
-
 
 	<p>26-09-2015</p>
 	<p>Hmm, kinda torn here. I have a choice to make, turning my webhosting to another service and FreeNAS my ass here at home, or keep going as it is. And maybe expand the capacity. I'm leaning on FreeNAS, simply because simplicity and the so called plug-and-playability of it. Maybe some testing on a netbook just for the luls? The webpage would still look and feel just as crap as before, it would simply be hosted by professionals. Should be easy call to make, but I do like to tinker with stuff way too much to give all control away, even if its only hardware side. Mhm, wait and see I guess. </p>
@@ -247,11 +240,11 @@
 				z-index: 1;
 				display: block;
 				width: 250px;
-				padding: 5px;
-				margin: 30px;
+				padding: 3px;
+				margin: 20px;
 				background: #424242;
 				color:lightgray;
-			
+							
 			}
 			
 			.infobox2 {
@@ -261,8 +254,8 @@
 				z-index: 1;
 				display: block;
 				width: 250px;
-				padding: 5px;
-				margin: 30px;
+				padding: 3px;
+				margin: 20px;
 				background: #424242;
 				color:lightgray;
 			
