--- a/testsite1/index.html
+++ b/testsite1/index.html
@@ -129,11 +129,11 @@
             - Kippi, takalaita ajosiltana</p>
         </div>
       </div>
-      
+      <br>
     </div>
   </section>
 
-  <!-- Products -->
+  <!-- Products 
   <section class="testimonials text-center bg-light">
     <div class="container">
       <h2 class="mb-5">Muut palvelut</h2>
@@ -162,6 +162,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- Custom text -->
   <section class="call-to-action text-white text-center">
