--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
   </script>
 <![endif]-->
-<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+	<script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -56,7 +58,6 @@
 
 	<p>28-05-2019</p>
 	<p>Thriller filler.</p>
-	<div> </div>
 
 	<p>14-03-2019</p>
 	<p>Sights.</p>
@@ -177,139 +178,6 @@
 
 	<p>19-02-2015</p>
 	<p>Transition to newer hardware and nginx complete.<p>
-
-		<style>
-
-			body {
-				background-color: #696969;
-				font-family: Monospace, Helvetica;
-				margin-left: 10%;
-				margin-right: auto;
-			
-			}
-			
-			a {
-				color: SlateGray;
-			
-			}
-			
-			h1	{
-				color: white;
-				margin-right: 30px;
-				padding-bottom: 35px;
-			
-			}
-			
-			h2	{
-				color: white;
-				margin-left: 10%;
-			
-			}
-			
-			
-			p 	{
-				color: white;
-				margin-left: 10%;
-				width: 440px;
-				padding-bottom: 10px;
-			
-			}
-			
-			.bottom	{
-				color: white;
-				text-align: center;
-				font-style: italic;
-			
-			}
-			
-			IMG.middle {
-				display: block;
-				margin-left: 10%;
-				margin-right: auto;
-			
-			}
-			
-			footer {
-				text-align: center;
-				color: white;
-				margin-left: auto;
-			
-			}
-			
-			.infobox {
-				position: fixed;
-				left: 65%;
-				top: 6em;
-				z-index: 1;
-				display: block;
-				width: 250px;
-				padding: 3px;
-				margin: 20px;
-				background: #424242;
-				color:lightgray;
-							
-			}
-			
-			.infobox2 {
-				position: fixed;
-				left: 65%;
-				top: 17em;
-				z-index: 1;
-				display: block;
-				width: 250px;
-				padding: 3px;
-				margin: 20px;
-				background: #424242;
-				color:lightgray;
-			
-			}
-			
-			.banner_left {
-				position: fixed;
-				left: 0%;
-				top: 0em;
-				z-index: 1;
-				display: block;
-				height: 100%;
-				width: 25px;
-				padding: 11px;
-				line-height: 40px;
-				background: #424242;
-				color:lightgray;
-							
-			}
-			
-			/*
-			.graphic1 {
-				position: fixed;
-				left: 65%;
-				top: 20em;
-				z-index: -1;
-				display: block;
-				width: 100%;
-				padding: 5px;
-				margin: 30px;
-				background: #424242;
-				color: gray
-			}
-			*/
-			
-			/*
-			.topbanner_shape {
-				position: absolute;
-				left: 30%;
-				top: 2em;
-				z-index: -1;
-				display: block;
-				width: 100%;
-				padding: 5px;
-				margin: 30px;
-				background: #424242;
-				color: gray
-			}
-			*/
-			</style>
-			
 			
 
 	<footer>
