--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 </head>
 
@@ -29,22 +31,27 @@
 	<a>Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.<br>  
 	This site is a simple workjournal and test environment mostly for myself.</a>
 	</div>
-
+<!--
 	<div class="infobox2">
 	<b>Links:</b>
 	<br>
 	<a href="https://twitter.com/mortumm" target="_blank">Twitter</a> || <a href="https://mortumm.imgur.com" target="_blank">Imgur</a>
 	<br>
-	
 	</div>
-
-	<div class="banner_left">
+-->
+	<div class="banner_left container">
+		<div class="top">
 		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
 		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
 		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
 		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
 		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
 		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
+	</div>
+		<div class="social-icons">
+			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;vertical-align: bottom;"></span></a>
+			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;vertical-align: bottom;"></span></a>
+		</div>
 	</div>
 
 	<p>21-01-2020</p>
