nice date update

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;vertical-align: bottom;"></span></a>
 		</div>
 	</div>
+	<p>02-02-2020</p>
+	<p>Again in 900 years.</p>
 
 	<p>21-01-2020</p>
 	<p>Test sites up and running, finally. Fullstack courses ongoing for hUNI.</p>
