social buttons and post

--- a/index.html
+++ b/index.html
@@ -48,11 +48,16 @@
 		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
 		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
 	</div>
-		<div class="social-icons">
-			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;vertical-align: bottom;"></span></a>
-			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;vertical-align: bottom;"></span></a>
+
+		<div class="social-icons container">
+			<a href="https://twitter.com/mortumm" target="_blank"><span class="iconify" data-icon="simple-icons:twitter" style="font-size:24px;"></span></a><br>
+			<a href="https://mortumm.imgur.com" target="_blank"><span class="iconify" data-icon="simple-icons:imgur" style="font-size:24px;"></span></a>
 		</div>
 	</div>
+
+	<p>05-02-2020</p>
+	<p>Wow, the eldest turns 7 tomorrow. Unbelievable. macOS Catalina is getting a go now, first mac in years in general. The i7 laptop still rocks as my main rig, not problems whatsoever after the fan replacement. Video editing, photo manipulation, 3D rendering or gaming, no hiccups. High temps though, something to maybe take as a concern regarding the silicons aging/life expectancy. FinalMouse 2012 still rocks!</p>
+
 	<p>02-02-2020</p>
 	<p>Again in 900 years.</p>
 
