--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		</div>
 	</div>
 
+	<p>19-03-2020</p>
+	<p>Shit is fucked. Stay safe and keep learning.</p>
+
 	<p>05-02-2020</p>
 	<p>Wow, the eldest turns 7 tomorrow. Unbelievable. macOS Catalina is getting a go now, first mac in years in general. The i7 laptop still rocks as my main rig, no problems whatsoever after the fan replacement. Video editing, photo manipulation, 3D rendering or gaming, no hiccups. High temps though, something to maybe take as a concern regarding the silicons aging/life expectancy. FinalMouse 2012 still rocks!</p>
 
