formatting for content

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
 	</div>
 
 	<p>03-04-2020</p>
-	<p>Blergh, ex-landlord keeps giving me bad news after bad news. Stressed about such a mundane thing.<br> Not really coding per say, but got my feet wet real well with html-frameworks. This still looks like a work in erm, pieces. Once I feel comfortable with html and css, js will come. About tech, finally, since that the thing I mostly write here about: Olympus Tough TG-Tracker going rounds now, love the quality of high speed video. Still something I haven't been able to capture with DSLR. And from DSLR's, the Nikon 7xxxx series looks really good to my eye, the old Canon 500D is ready to retire. All in all, this social distancing and all has given me more time to focus. Stay safe and healthy. Love ya.
+	<p>Blergh, ex-landlord keeps giving me bad news after bad news. Stressed about such a mundane thing.<br> Not really coding per say, but got my feet wet real well with html-frameworks. This still looks like a work in erm, pieces. Once I feel comfortable with html and css, js will come. </p>
+	<p>About tech, since that the thing I mostly write here about: Olympus Tough TG-Tracker going rounds now, love the quality of high speed video. Still something I haven't been able to capture with DSLR. And from DSLR's, the Nikon 7xxxx series looks really good to my eye, the old Canon 500D is ready to retire. All in all, this social distancing and all has given me more time to focus. Stay safe and healthy. Love ya.
 	Oh, and gotta say I love the Tom of Finland sheets I got... </p>
 
 	<p>19-03-2020</p>
