--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 		</div>
 	</div>
 
+	<p>16-07-2020</p>
+	<p>The wave of social engineering hacks that happened on Twitter, woah and wow. Really bad.</p>
+	<p>Python and Front end still in the works. No school admittane, so continuing my work with open courses for the uni. Went full Apple during the spring and summer, We'll have to see how long this fares...</p>
+
 	<p>03-04-2020</p>
 	<p>Blergh, ex-landlord keeps giving me bad news after bad news. Stressed about such a mundane thing.<br> Not really coding per say, but got my feet wet real well with html-frameworks. This still looks like a work in erm, pieces. Once I feel comfortable with html and css, js will come. </p>
 	<p>About tech, since that the thing I mostly write here about: Olympus Tough TG-Tracker going rounds now, love the quality of high speed video. Still something I haven't been able to capture with DSLR. And from DSLR's, the Nikon 7xxxx series looks really good to my eye, the old Canon 500D is ready to retire. All in all, this social distancing and all has given me more time to focus. Stay safe and healthy. Love ya.
