--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 	<p>16-07-2020</p>
 	<p>The wave of social engineering hacks that happened on Twitter, woah and wow. Really bad.</p>
-	<p>Python and Front end still in the works. No school admittane, so continuing my work with open courses for the uni. Went full Apple during the spring and summer, We'll have to see how long this fares...</p>
+	<p>Python and Front end still in the works. No school admittance, so I continue my work with open courses for the uni. Went full Apple during the spring and summer, We'll have to see how long this fares...</p>
 
 	<p>03-04-2020</p>
 	<p>Blergh, ex-landlord keeps giving me bad news after bad news. Stressed about such a mundane thing.<br> Not really coding per say, but got my feet wet real well with html-frameworks. This still looks like a work in erm, pieces. Once I feel comfortable with html and css, js will come. </p>
