--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 		</div>
 	</div>
 
+	<p>18-12-2020</p>
+	<p>Phew, what a year. Lots has happened professionally and personally. h2c studies didnt pan out. Still doing does openUni front end, also the product development courses. Take care, mask the f up. All the best for 2021!</p>
+
+
 	<p>16-07-2020</p>
 	<p>The wave of social engineering hacks that happened on Twitter, woah and wow. Really bad.</p>
 	<p>Python and Front end still in the works. No school admittance, so I continue my work with open courses for the uni. Went full Apple during the spring and summer, We'll have to see how long this fares...</p>
