--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</div>
 
 	<p>18-12-2020</p>
-	<p>Phew, what a year. Lots has happened professionally and personally. h2c studies didnt pan out. Still doing does openUni front end, also the product development courses. Take care, mask the f up. All the best for 2021!</p>
+	<p>Phew, what a year. Lots has happened professionally and personally. h2c studies didnt pan out. Still doing those openUni front end courses, also the product manager program. <br>Take care, mask the f up. All the best for 2021!</p>
 
 
 	<p>16-07-2020</p>
