--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		</div>
 	</div>
 
+	<p>20-03-2021</p>
+	<p>Front end stuff keeps me occupied. Frameworks are starting to open up too. Working on my final paper for the TKEAT. Personal life has seen some major changes too, new address to share with a special someone. Tech in a freetime pleasure hasnt happened... Pokemon GO is fun tho :O</p>
+
 	<p>18-12-2020</p>
 	<p>Phew, what a year. Lots has happened professionally and personally. h2c studies didnt pan out. Still doing those openUni front end courses, also the product manager program. <br>Take care, mask the f up. All the best for 2021!</p>
 
