--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		</div>
 	</div>
 
+	<p>06-05-2021</p>
+	<p>Well, plans dont always play out like you'd hope. School is going good, professional life in general is in good lift. Tech and tinkering has been a sideshow for a while. Haven't had the energy or the time to push my personal projects forward. Personal life is in a state of questions, towards myself and others. Keep yourself and others safe. </p>
+
 	<p>20-03-2021</p>
 	<p>Front end stuff keeps me occupied. Frameworks are starting to open up too. Working on my final paper for the TKEAT. Personal life has seen some major changes too, new address to share with a special someone. Tech in a freetime pleasure hasnt happened... Pokemon GO is fun tho :O</p>
 
