--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		</div>
 	</div>
 
+	<p>16-08-2021</p>
+	<p>Wadap. Again, updates are slow. Tough two years for all of us. </p>
+
 	<p>18-12-2020</p>
 	<p>Phew, what a year. Lots has happened professionally and personally. h2c studies didnt pan out. Still doing those openUni front end courses, also the product manager program. <br>Take care, mask the f up. All the best for 2021!</p>
 
