--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		</div>
 	</div>
 
+	<p>16-06-2022</p>
+	<p>Holy shit. How can time pass so fast... More than a year later I'm back here. </p>
+
 	<p>06-05-2021</p>
 	<p>Well, plans dont always play out like you'd hope. School is going good, professional life in general is in good lift. Tech and tinkering has been a sideshow for a while. Haven't had the energy or the time to push my personal projects forward. Personal life is in a state of questions, towards myself and others. Keep yourself and others safe. </p>
 
