--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 		</div>
 	</div>
 
+	<p>24-07-2022</p>
+	<p>Huh, I am aiming to become an engineer. Much wow.</p>
 
 	<p>16-06-2022</p>
 	<p>Holy shit. How can time pass so fast... More than a year later I'm back here. </p>
