--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<h1>M̹̄o̙̪̗̹̫̖r̩̯̱ͤ̌ͪ̀̾̿̒ṱ̷̗̺̦̹͎̟͂̅ͭ͗͂̓̚ü̟̩͚̦̣̱͎ͫͩ͗̽̅͜m̵̭̦̂̈́m̰̠̹̳̜̖ͥ̾̍'̮̖̗̻̓ͫ͘s̘͙̘͕͗̾ͨ ͔͑ͬ̒͒̏̿͜Ľ̷͉ả͗҉̙̼̗͙̼i̘̙ͬ̓͆͛̋̎ͫ͠r̶̈̀̈̔</h1 >
 
 	<div class="infobox">
-	<b>Info:</b>
-	<a>Three decades old nerd here, fixing stuff from hardware and software. Be it r/c or computer tech, I'm interested.<br>  
-	This site is a simple workjournal and test environment mostly for myself.</a>
+	<b>Contact:</b>
+	<a>nuno at nunofix dot com<br>
+	</a>
 	</div>
 <!--
 	<div class="infobox2">
@@ -41,11 +41,11 @@
 -->
 	<div class="banner_left container">
 		<div class="top">
-		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
-		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
-		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
-		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/blog/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-1" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite1/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-2" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite2/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-3" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite3/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-4" style="font-size:24px;"></span></a>
+		<a href="https://mortumm.github.io/testsite4/index.html" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-5" style="font-size:24px;"></span></a>
 		<a href="#" target="_blank"><span class="iconify" data-icon="mdi:hexagon-slice-6" style="font-size:24px;"></span></a>
 	</div>
 
