First post under nunofix name

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8"/>
-<meta name="Mortumm" content="Memo">
+<meta name="Nunofix" content="Landing page">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Mortumm's Lair</title>
+	<title>nunofix</title>
 
 <!--[if lt IE 9]>
   	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
@@ -24,7 +24,7 @@
 
 <body>
 	<br>
-	<h1>M̹̄o̙̪̗̹̫̖r̩̯̱ͤ̌ͪ̀̾̿̒ṱ̷̗̺̦̹͎̟͂̅ͭ͗͂̓̚ü̟̩͚̦̣̱͎ͫͩ͗̽̅͜m̵̭̦̂̈́m̰̠̹̳̜̖ͥ̾̍'̮̖̗̻̓ͫ͘s̘͙̘͕͗̾ͨ ͔͑ͬ̒͒̏̿͜Ľ̷͉ả͗҉̙̼̗͙̼i̘̙ͬ̓͆͛̋̎ͫ͠r̶̈̀̈̔</h1 >
+	<h1>nunofix - software & hardware consultant</h1 >
 
 	<div class="infobox">
 	<b>Contact:</b>
@@ -55,8 +55,8 @@
 		</div>
 	</div>
 
-	<p>24-07-2022</p>
-	<p>Huh, I am aiming to become an engineer. Much wow.</p>
+	<p>12-10-2022</p>
+	<p>Brand spanking new landing page. Using the layout that was used in my early work, a lot better than the generic stuff based on public profiles. Updates will be slow, but I'll get there.</p>
 
 			
 
