--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</div>
 
 	<p>12-10-2022</p>
-	<p>Brand spanking new landing page. Using the layout that was used in my early work, a lot better than the generic stuff based on public profiles. Updates will be slow, but I'll get there.</p>
+	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work, a lot better than the generic stuff based on public profiles. Updates will be slow, but I'll get there.</p>
 
 			
 
