--- a/index.html
+++ b/index.html
@@ -56,8 +56,17 @@
 	</div>
 
 	<p>12-10-2022</p>
-	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work, a lot better than the generic stuff based on public profiles. Updates will be slow, but I'll get there.</p>
+	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work, a lot better than the generic landin pages in my opinion. A classic look.<br> Updates will be slow, but I'll get there.</p>
 
+	<p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam convallis, scelerisque ante eu, tempor ex. Phasellus porttitor tellus sit amet commodo pretium. Nam congue rutrum elit, vel tempus neque porttitor non. Aliquam erat volutpat. Duis lobortis et ante in dignissim. Integer magna libero, fermentum at erat sit amet, laoreet ultricies nunc. Integer pretium, lorem ut porttitor ullamcorper, purus lorem posuere risus, eget dictum ligula eros at erat. Sed rhoncus varius tristique. Nulla lacinia sollicitudin sapien ac pretium. Proin non iaculis tellus, vel maximus justo. Mauris mi enim, rhoncus id est at, rhoncus ullamcorper massa. In eget nisl finibus, congue erat posuere, suscipit diam. Vivamus eu lectus vulputate, egestas justo in, imperdiet neque.
+	</p>
+	<p>
+		Curabitur dignissim placerat massa, a cursus lacus gravida sed. Nam vitae scelerisque magna. Ut non ipsum leo. Sed sit amet pretium quam. Cras in nulla posuere urna commodo tristique in sed lectus. Proin scelerisque pharetra lorem, non porttitor arcu tempus feugiat. Maecenas hendrerit augue vitae felis vehicula, sit amet cursus orci congue. Fusce fermentum, arcu nec suscipit faucibus, justo tellus viverra elit, et feugiat diam lorem in velit. Ut pellentesque erat et tortor varius auctor. In quis nunc neque. Praesent id urna scelerisque, viverra sem sed, pellentesque magna.
+	</p>
+	<p>
+		Praesent at velit metus. Aenean placerat purus varius, tristique nibh vitae, mollis ante. Etiam ornare egestas feugiat. Sed laoreet elementum mi, at dapibus est feugiat at. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum varius euismod imperdiet. Fusce lacinia augue eros, non scelerisque metus pharetra ac. Fusce ornare pharetra felis ut imperdiet. Fusce aliquet risus ac metus venenatis, ut molestie enim vulputate. Mauris erat ex, feugiat nec viverra sit amet, vestibulum at ligula. Donec vitae eleifend lacus, in eleifend elit. Sed euismod porttitor mauris eget pulvinar. Vestibulum eu eros quis nisi rhoncus semper vitae sit amet leo. Pellentesque imperdiet, dolor eget pellentesque venenatis, nisl dui sagittis lectus, vitae blandit quam dolor sit amet ex. Nulla at nisi orci.
+	</p>
 			
 
 	<footer>
