--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 	<br>
-	<h1>nunofix - software & hardware consultant</h1 >
+	<h1>nunofix - becoming a software engineer</h1 >
 
 	<div class="infobox">
 	<b>Contact:</b>
