--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</div>
 
 	<h2>12-10-2022</h2>
-	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work, a lot better than the generic landin pages in my opinion. A classic look.<br> Updates will be slow, but I'll get there.</p>
+	<p>Brand spanking new landing page.<br>Using the layout that was used in my early work. A classic look.<br> Updates will be slow, but I'll get there.</p>
 
 	<h2>Lorem</h2>
 	<p>
