--- a/testsite2/index.html
+++ b/testsite2/index.html
@@ -15,14 +15,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Testing grounds.</title>
+    <title>Lets see</title>
 </head>
+
 <body>
-    <h1>See, just like that.</h1>
-    <p>And some text to see this happening. Some css coming in later.</p>
-    <h2>Lets see how this one looks.</h2>
-    <h3>Heading number three is this</h3>
-    <h5>And heading number five here. It's h1 - h6, remember?</h5>
+    <h1>See, just pick in or out:</h1>
+    
+    <button>In</button>
+
+    <button>Out</button>
 
     <a data-remote="https://i.imgur.com/TBwUQiV.jpg" data-toggle="lightbox" data-gallery="example-gallery" data-type="image">
         <img src="https://i.imgur.com/TBwUQiV.jpg" class="img-fluid" height="200" width="150">
